--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "db:seed": "prisma db seed"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.3.4",
+    "@mui/material": "^5.15.11",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.9.1",
     "@radix-ui/react-avatar": "^1.0.4",
