--- a/package.json
+++ b/package.json
@@ -18,17 +18,22 @@
     "@hookform/resolvers": "^3.3.4",
     "@mui/material": "^5.15.11",
     "@next-auth/prisma-adapter": "^1.0.7",
+    "@nextui-org/navbar": "^2.0.27",
+    "@nextui-org/react": "^2.2.10",
     "@prisma/client": "^5.9.1",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-navigation-menu": "^1.1.4",
+    "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
+    "@szhsin/react-menu": "^4.1.0",
     "@tanstack/react-query": "^5.20.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "embla-carousel-react": "8.0.0-rc23",
+    "framer-motion": "^11.0.8",
     "lucide-react": "^0.323.0",
     "next": "14.1.0",
     "next-auth": "^4.24.5",
@@ -37,6 +42,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
+    "react-resizable-panels": "^2.0.12",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.7.0",
