--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@nextui-org/navbar": "^2.0.27",
     "@nextui-org/react": "^2.2.10",
     "@prisma/client": "^5.9.1",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
@@ -30,6 +31,7 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@szhsin/react-menu": "^4.1.0",
     "@tanstack/react-query": "^5.20.5",
+    "@tanstack/react-query-devtools": "4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "embla-carousel-react": "8.0.0-rc23",
