--- a/package.json
+++ b/package.json
@@ -8,61 +8,64 @@
     "start": "next start",
     "lint": "next lint",
     "db:migrate": "prisma migrate dev",
+    "db:migrate:deploy": "prisma migrate deploy",
     "db:gen": "prisma generate",
     "db:studio": "prisma studio",
-    "db:seed": "prisma db seed"
+    "db:seed": "prisma db seed",
+    "upload-files": "bash ./scripts/upload-files.sh",
+    "docker:build": "bash ./scripts/docker-build.sh",
+    "docker:deploy": "bash ./scripts/deploy.sh",
+    "deploy": "pnpm upload-files && pnpm docker:build && pnpm docker:deploy"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.3.4",
-    "@mui/material": "^5.15.11",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@nextui-org/navbar": "^2.0.27",
-    "@nextui-org/react": "^2.2.10",
-    "@prisma/client": "^5.9.1",
+    "@prisma/client": "^5.11.0",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
-    "@szhsin/react-menu": "^4.1.0",
-    "@tanstack/react-query": "^5.20.5",
-    "@tanstack/react-query-devtools": "4",
+    "@tanstack/react-query": "^5.28.9",
+    "@tanstack/react-query-devtools": "^5.28.9",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "embla-carousel-react": "8.0.0-rc23",
-    "framer-motion": "^11.0.8",
+    "drawer": "^0.0.2",
+    "embla-carousel-react": "^8.0.0",
     "lucide-react": "^0.323.0",
     "next": "14.1.0",
-    "next-auth": "^4.24.5",
+    "next-auth": "^4.24.7",
     "next-themes": "^0.2.1",
-    "pnpm": "^8.15.1",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-hook-form": "^7.50.1",
-    "react-resizable-panels": "^2.0.12",
-    "tailwind-merge": "^2.2.1",
+    "prisma": "^5.11.0",
+    "radix-ui": "^1.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.2",
+    "react-navigation-menu": "^1.0.3",
+    "react-resizable-panels": "^2.0.16",
+    "sharp": "^0.33.3",
+    "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
-    "tsx": "^4.7.0",
+    "tsx": "^4.7.1",
+    "vaul": "^0.9.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "eslint": "^8",
+    "@types/node": "^20.11.30",
+    "@types/react": "^18.2.72",
+    "@types/react-dom": "^18.2.22",
+    "autoprefixer": "^10.4.19",
+    "eslint": "^8.57.0",
     "eslint-config-next": "14.1.0",
-    "postcss": "^8",
-    "prisma": "^5.9.1",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.4.3"
   },
   "prisma": {
-    "seed": "tsx prisma/seed.ts"
+    "seed": "node prisma/seed.mjs"
   }
 }
