--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.2",
+    "react-icons": "^5.0.1",
     "react-navigation-menu": "^1.0.3",
     "react-resizable-panels": "^2.0.16",
     "sharp": "^0.33.3",
